Unify data API interface and docs